# svl

./: .ccls  .gitignore  Makefile  a.c  commandline.cpp  commandline.hh  expr.cpp  expr.hh  expr2b.cpp  input.txt  interpreter.cpp  interpreter.hh  main  main.cpp  out  parser.cpp  parser.hh  readinputline.cpp  readinputline.hh  svl1.cpp  t3b.cpp  tok3b.cpp  tok6a3.cpp  token.cpp  token.hh  tree.cpp  tree.hh  vm_svl.cpp  vm_svl.hh
vm2/: Makefile  Makefile.orig  assembler.cpp  assembler.hh  assembler_interactive.cpp  assembler_interactive.hh  assembly.cpp  assembly.hh  assembly_sbc.cpp  commandline.cpp  commandline.hh  ex1.asm  ex2.asm  ex4.asm  main.cpp  my_helpers.cpp  out  printer.cpp  prompt.cpp  prompt.hh  run.sh  t.cpp  tree.cpp  tree.hh  vm.cpp  vm.hh  vm_num.hh
vm3/: .ccls  Makefile  Makefile2  Parser2.cpp  Parser2.hh  Parser2.hpp  Scanner2.cpp  Scanner2.hh  Scanner2.hpp  asm.l  asm.y  asm_grammar.y  asm_lexer.l  asm_parser.cc  asm_parser.cpp  asm_parser.hh  asm_scanner.cc  asm_scanner.cpp  asm_scanner.hh  asm_scanner_internal.hh  assembler.cc  assembler.cpp  assembler.h  assembler.hh  assembler_interactive.cpp  assembler_interactive.hh  assembly.cpp  assembly.hh  ast.cc  ast.cpp  ast.hh  ast_grammar.y  ast_lexer.l  ast_parser.hh  ast_scanner.hh  ast_scanner_internal.hh  atom.cpp  atom.hh  branch1.asm  branch2.asm  (+94 more)
vm5/: Makefile  Makefile_new  ast.cc  ast.hh  entity.cc  entity.hh  lang.hh  list_entity.cc  list_entity.hh  map_entity.cc  map_entity.hh  number.cc  number.hh  operand.cc  operand.hh  operand_entity.cc  operand_entity.hh  operand_tostr.cc  operand_tostr.hh  out  printer_any.cc
vm6/: Makefile  ast.cc  ast.hh  entity.cc  entity.hh  lang.hh  list_entity.cc  map_entity.cc  map_entity.hh  node_02.cc  node_03.cc  node_04.cc  number.hh  operand.cc  operand.hh  operand_entity.cc  operand_entity.hh  operand_math.cc  operand_tostr.cc  operand_tostr.hh  operand_visitors.cc  operand_visitors.hh  que_node.cc  run.sh  t.cc  t_expr.cc
vm7/: .svlm_history  CMakeLists.txt  Makefile  a.txt  ast.cc  ast.hh  ast_list.cc  ast_list.hh  ast_map.cc  ast_map.hh  color.hh  commandline.hh  lang.hh  main.cc  my_helpers.hh  operand.cc  operand.hh  operand_math.cc  operand_tostr.cc  operand_tostr.hh  operand_visitors.cc  original_makefile.txt  out  prompt.hh  que_node.cc  que_node.hh  scope_logger.cc  scope_logger.hh  svlm_ast.cc  svlm_ast.hh  svlm_grammar.y  svlm_interactive.cc  svlm_interactive.hh  svlm_lexer.l  svlm_parser.cc  svlm_parser.hh  svlm_scanner.cc
vm7/parse_vm7/: .gdb_history  .svlm_history  ast.hh  ast_list.cc  ast_list.hh  ast_map.cc  ast_map.hh  lang.hh  main.cc  number.cc  operand.cc  operand.hh  que_node.hh  svlm_ast.cc  svlm_interactive.cc  svlm_parser.cc
vm7/parse_vm7/test_cc/: .gdb_history  t_list_01.cc  t_operand_01.cc
vm7/parse_vm7/test_svlm/: func_while_flow1.svlm.rb  list.svlm.rb  num3.txt
vm7/test_cc/: .gdb_history  Makefile  t_list_01.cc  t_list_02.cc  t_list_03.cc  t_map_01.cc  t_map_02.cc  t_map_04.cc  t_operand_01.cc  t_quenode_01.cc  t_quenode_02.cc
vm7/test_svlm/: list.svlm.rb  map1.svlm.rb  num1.svlm.rb  num1.txt  num2.txt  num2.txt.rb  num3.txt  tuple.svlm.rb
vm8/: .gdb_history  .svlm_history  :q  CMakeLists.txt  CMakePresets.json  Makefile  array2.cc  array3.cc  ast.cc  ast.hh  ast_list.cc  ast_list.hh  ast_map.cc  ast_map.hh  (+30 more)
vm8/test_cc/: .gdb_history  CMakeLists.txt  Makefile  t_ast_01.cc  t_list_01.cc  t_list_02.cc  t_list_03.cc  t_map_01.cc  t_map_02.cc  t_map_03.cc  t_map_04.cc  t_nil_01.cc  t_operand_01.cc  t_operand_list_01.cc  t_operand_list_02.cc  t_operand_map_01.cc  t_operand_map_02.cc  t_operand_map_03.cc  t_operand_ptr_01.cc  t_operand_usu_01.cc  t_operand_value_01.cc  t_quenode_01.cc
vm9/: CMakeLists.txt  ast.cc  ast.hh  ast_caller.cc  ast_case.cc  ast_case.hh  ast_list.cc  ast_list.hh  ast_loop.cc  ast_map.cc  ast_map.hh  ast_node.cc  ast_node.hh  ast_repeat.cc  astnode_visitors.cc  lang.hh  main.cc  module_registry.cc  my_helpers.cc  my_helpers.hh  operand.cc  operand.hh  operand_math.cc  operand_tostr.cc  operand_vars.hh  operand_visitors.cc  out  prompt.cc  scope_logger.cc  scope_logger.hh  svlm_ast.cc  svlm_ast.hh  svlm_dyn_loader.cc  svlm_dyn_loader.hh  svlm_grammar.y  svlm_interactive.cc  svlm_interactive.hh  svlm_lang.cc  svlm_lang.hh  svlm_lexer.l  (+6 more)
vm9/node/: .ccls  .gdb_history  .gitignore  Makefile  Makefile.main  commandline.cc  commandline.hh  defs.hh  doc.txt  error.cc  error.hh  gc.cc  gc.hh  gen_atom.cc  grep  interactive.cc  interactive.hh  io_file.cc  io_file.hh  kernel.cc  kernel.hh  kernel_keyword.hh  lang.cc  lang.hh  line_multi.cc  lisp.cc  lisp.hh  lisp03_ms.cc  lisp_expr.cc  lisp_expr.hh  lisp_expr_call.cc  lisp_expr_eval.cc  lisp_expr_eval_math.hh  lisp_expr_func.cc  lisp_expr_func_tmpl.cc  lisp_expr_helpers.cc  lisp_expr_keywords.cc  lisp_expr_parse.cc  lisp_expr_static.cc  lisp_reader.cc  (+29 more)
vm9/node/bak/: lisp_reader.cc  lisp_reader.hh
vm9/node/test_cc/: .gdb_history  .loosh_history  :w  Makefile  array_1.lisp  array_2.lisp  array_3.lisp  array_4.lisp  array_5.lisp  assert_mac.lisp  assign_1.lisp  assign_2.lisp  block_1.lisp  block_2.lisp  block_3.lisp  block_4.lisp  block_5.lisp  block_5_fan.lisp  block_6.lisp  block_7.lisp  block_8.lisp  block_fan_4.lisp  car_1.lisp  case_1.lisp  cdr_1.lisp  class_01.lisp  class_1.lisp  class_2.lisp  class_3.lisp  class_4.lisp  class_5.lisp  class_6.lisp  class_7_fun.lisp  closure_1.lisp  cond_1.lisp  cond_2.lisp  do_1.lisp  do_2.lisp  enum.lisp  err  (+99 more)
vm9/test_cc/: CMakeLists.txt  t_dynload_01.cc  t_operand_01.cc  t_operand_list_01.cc  t_operand_list_02.cc  t_operand_map_01.cc  t_operand_map_02.cc  t_operand_map_03.cc  t_operand_tuple_01.cc  t_operand_value_01.cc  t_root_01.cc
vm9/test_svlm/: class1.svlm.rb  class2.svlm.rb  err1.svlm.rb  if1.svlm.rb  list.svlm.rb  list_local1.svlm.rb  map1.svlm.rb  mod1.svlm.rb  mod2.svlm.rb  mod3.svlm.rb  num1.svlm.rb  num2.svlm.rb  num2.txt.rb  num3.txt  num_case1.svlm.rb  num_case1.txt  num_case3.svlm.rb  repeat1.svlm.rb  tuple.svlm.rb  tuple2.svlm.rb  tuple3.svlm.rb  tuple_case3.svlm.rb  tuple_if1.svlm.rb  while1.svlm.rb
(+92 files in other folders)
